# polyrhythm

./: .gitmodules  Cargo.toml  README.md  build.sh
site/: index.html
src/: drawing.rs  grammar.lalrpop  lib.rs  parse.rs  polyrhythm.rs  rhythm.rs  time.rs  units.rs
src/drawing/: coord.rs  drawing.rs  layout.rs  pixels.rs
src/rhythm/: duration.rs
