[package]
name = "polyrhythm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
num-rational = "0.4.2"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["console", "Window", "Document", "Element", "EventTarget", "HtmlDivElement", "HtmlParagraphElement", "HtmlCanvasElement", "HtmlTextAreaElement", "CanvasRenderingContext2d"] }
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"]}
num-traits = "0.2.19"

[build-dependencies]
lalrpop = "0.20.2"
